infra/k8s/templates/namespace.template.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/part-of: fridge-stats
    app.kubernetes.io/managed-by: envsubst
    project-id: "${PROJECT_ID}"
  name: ${NAMESPACE}
