infra/k8s/templates/postgres.template.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/part-of: fridge-stats
    app.kubernetes.io/managed-by: envsubst
    project-id: "${PROJECT_ID}"
  name: postgres
  namespace: ${NAMESPACE}
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/part-of: fridge-stats
    app.kubernetes.io/managed-by: envsubst
    project-id: "${PROJECT_ID}"
  name: postgres
  namespace: ${NAMESPACE}
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: fridge-stats
        app.kubernetes.io/managed-by: envsubst
        project-id: "${PROJECT_ID}"
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["bash", "-lc", "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"]
            initialDelaySeconds: 10
            periodSeconds: 5
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
        storageClassName: ${STORAGE_CLASS}
