infra/k8s/templates/ui.template.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/part-of: fridge-stats
    app.kubernetes.io/managed-by: envsubst
    project-id: "${PROJECT_ID}"
  name: ui
  namespace: ${NAMESPACE}
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/part-of: fridge-stats
    app.kubernetes.io/managed-by: envsubst
    project-id: "${PROJECT_ID}"
  name: ui
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: fridge-stats
        app.kubernetes.io/managed-by: envsubst
        project-id: "${PROJECT_ID}"
        app: ui
    spec:
      containers:
        - name: ui
          image: ${UI_IMAGE}
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
